Implementing Userservice